kubernetes/clusters/home/apps/homepage/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Homepage
    gethomepage.dev/group: Platform
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/href: https://home.syslabs.dev
    gethomepage.dev/siteMonitor: https://home.syslabs.dev
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`home.syslabs.dev`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
  tls: {}
